# multi-agent-resolution-synthesis

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ROADMAP.md  plugins.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
plans/: 00-implementation-order.md  01-synthesis-provider-config.md  02-max-tokens-config.md  03-synthesis-fallback.md  04-retry-with-backoff.md  05-temperature-control.md  06-progress-indicator.md  07-convergence-threshold.md  08-attribution-novel-content.md  09-round-over-round-diff.md  10-inline-model-selection.md
src/mar/: __init__.py  __main__.py  cli.py  config.py  models.py
src/mar/analysis/: attribution.py  costs.py
src/mar/debate/: base.py  engine.py  judge.py  round_robin.py
src/mar/display/: renderer.py
src/mar/output/: writer.py
src/mar/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py  registry.py
src/mars/: __init__.py  __main__.py  cli.py  config.py  models.py
src/mars/analysis/: attribution.py  costs.py
src/mars/debate/: base.py  engine.py  judge.py  prompts.py  round_robin.py
src/mars/display/: renderer.py
src/mars/output/: reader.py  writer.py
src/mars/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py  registry.py  vertex.py
tests/: test_cli.py
