[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-resolution"
version = "0.1.0"
description = "Multi-LLM debate CLI for resolving the best answer through structured argumentation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
]

[project.scripts]
mar = "mar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mar"]
